--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.21'
-        check-latest: true
-
-    - name: Build
-      run: go build -v ./cmd/privutil/
-
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
@@ -29,8 +20,11 @@ jobs:
         cache: 'npm'
         cache-dependency-path: web/package-lock.json
 
-    - name: Build Web
-      working-directory: ./web
-      run: |
-        npm install
-        npm run build --if-present
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+        check-latest: true
+
+    - name: Build with Makefile
+      run: make build
