--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v3
 
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.25'
+
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
