--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,8 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.25'
+    - name: Build with Makefile
+      run: make build
     - uses: wangyoucao577/go-release-action@v1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
