--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           go-version: '1.25'
 
+      - name: Build with Makefile
+        run: make build
+
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
