--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,11 +37,26 @@ jobs:
       with:
         go-version: '1.25'
         check-latest: true
-    - uses: wangyoucao577/go-release-action@v1
+    - name: Build and Archive
+      run: |
+        GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} make build
+        
+        ARCHIVE_NAME="privutil-${{ matrix.goos }}-${{ matrix.goarch }}"
+        
+        if [ "${{ matrix.goos }}" = "windows" ]; then
+          # Ensure .exe exists, fallback if necessary (some build systems might not add it automatically)
+          if [ ! -f privutil.exe ] && [ -f privutil ]; then mv privutil privutil.exe; fi
+          zip "${ARCHIVE_NAME}.zip" privutil.exe
+          echo "ARTIFACT_PATH=${ARCHIVE_NAME}.zip" >> $GITHUB_ENV
+        else
+          tar -czf "${ARCHIVE_NAME}.tar.gz" privutil
+          echo "ARTIFACT_PATH=${ARCHIVE_NAME}.tar.gz" >> $GITHUB_ENV
+        fi
+
+    - name: Upload to Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        goos: ${{ matrix.goos }}
-        goarch: ${{ matrix.goarch }}
-        binary_name: "privutil"
-        extra_files: LICENSE README.md
-        build_command: make build
+        files: ${{ env.ARTIFACT_PATH }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
