--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,7 @@
 name: Build and publish a Docker image to ghcr.io
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "docker"]
   pull_request:
     branches: [ "main" ]
 
