--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,23 +1,19 @@
 name: Build and publish a Docker image to ghcr.io
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  release:
+    types: [published]
 
 jobs:
-
   build:
-
     runs-on: "ubuntu-24.04"
     permissions:
       contents: read
       packages: write
     steps:
       - uses: actions/checkout@v2
-      # https://github.com/marketplace/actions/push-to-ghcr
       - name: Build and publish a Docker image for ${{ github.repository }}
         uses: macbre/push-to-ghcr@master
         with:
           image_name: ${{ github.repository }}  # it will be lowercased internally
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          extra_args: "--tag ${{ github.repository }}:${{ github.ref_name }}"
